--- a/deedy-resume-multilatex.tex
+++ b/deedy-resume-multilatex.tex
@@ -58,7 +58,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\documentclass[]{deedy-resume-reversed}
+\documentclass[]{deedy-resume-multilatex}
 \usepackage{fancyhdr}
 
 \pagestyle{fancy}
@@ -71,7 +71,7 @@
 %     LAST UPDATED DATE
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \lastupdated
+\lastupdated
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
