--- a/deedy-resume-multilatex.tex
+++ b/deedy-resume-multilatex.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Deedy - One Page Two Column Resume
+% Deedy MultiLatex - One Page Two Column Gray Scale Resume
 % LaTeX Template
-% Version 1.3 (22/9/2018)
+% Version 1.4 (29/7/2023)
 %
 % Original author:
 % Debarghya Das (http://debarghyadas.com)
@@ -15,7 +15,13 @@
 % v1.3 repository:
 % https://github.com/ZDTaylor/Deedy-Resume-Reversed
 %
-% IMPORTANT: THIS TEMPLATE NEEDS TO BE COMPILED WITH XeLaTeX
+% v1.4 author:
+% multitexlab
+%
+% v1.4 repository:
+% https://github.com/multitexlab/Deedy-Resume-MultiLatex
+%
+% IMPORTANT: THIS TEMPLATE NEEDS TO BE COMPILED WITH XeLaTeX, LuaLatex OR pdfLaTeX
 %
 % This template uses several fonts not included with Windows/Linux by
 % default. If you get compilation errors saying a font is missing, find the line
@@ -24,12 +30,18 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-% TODO:
-% 1. Add various styling and section options and allow for multiple pages smoothly.
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
 % CHANGELOG:
+% ### v1.4
+%  - Changing license from the Apache License 2.0 to MIT License
+%  - Isolated fontspec for using only with XeLaTeX and LuaLaTeX compilers
+%  - Used fontenc for pdfLaTeX compiler
+%  - Extracted commands to isolate fontspec/fontenc calls
+%  - Unhid last updated
+%  - Minor adjustments and cleanup some unused (cite, bib)
+%  - Files and class renamed to match repo name
+%  - Replaced resume data with generated content for a fictional character
+%  - Removed unused commented out sections
+%
 % v1.3:
 % 1. Removed MacFonts version as I have no desire to maintain it nor access to macOS
 % 2. Switched column ordering
